samples/_failures_safe/1761042642_b2773a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d4d075e.c: In function ‘main’:
./samples/SAFE/__tmp_6d4d075e.c:143:9: error: expected declaration or statement at end of input
  143 |         }
      |         ^
./samples/SAFE/__tmp_6d4d075e.c:143:9: error: expected declaration or statement at end of input
